# templatious_adapters

./: .travis.yml  CMakeLists.txt  README.md  TestDefs.hpp  main.cpp
qt/: All.hpp  CMakeLists.txt  QLinkedList.cpp  QLinkedList.hpp  QLinkedListTests.cpp  QList.hpp  QListTests.cpp  QVector.hpp  QVectorTests.cpp  QtTests.cpp  SymbolExport.cpp
testharness/: CCountColTest.hpp  CollectionAdapter.hpp  MoveTests.hpp  Proxies.hpp  VirtualCollection.hpp
ultimatepp/: All.hpp  CMakeLists.txt  UppBiVector.cpp  UppBiVector.hpp  UppTests.cpp  UppVector.cpp  UppVector.hpp
